update: separate us-ah stocks done
